# ros2-abb-irb4600-trajectory-planner

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/block1_stanislavskyi/: manipulator.hpp
launch/: demo.launch.py  model_spawner.launch.py  pose_teacher.launch.py
scripts/: plot_trajectory.py
src/: manipulator.cpp  manipulator_node.cpp  model_spawner.cpp  pose_teacher.cpp
