<?xml version="1.0"?>
<package format="3">
  <name>block1_stanislavskyi</name>
  <version>0.0.0</version>
  <description>Trajectory generation project for ABB IRB4600</description>

  <maintainer email="mykolastanislavskyi@gmail.com">Mykola Stanislasvkyi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>abb_irb4600_ikfast</depend>
  

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>